--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es mi sitio web holaaaa
+        Hola estudiantes ya subi mi primer push
     </p>
 </body>
 </html>
