El segundo commit de mi archivo

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes ya subi mi primer push
+        Aquí estoy haciendo mi segundo cambio con el curso de Fredy
     </p>
 </body>
 </html>
