--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
 <body>
     <p>
         Aquí estoy haciendo mi segundo cambio con el curso de Fredy
+        Continuo con los cambios 
     </p>
 </body>
 </html>
